fix(kit): textarea flickering when type space

--- a/projects/kit/components/textarea/textarea.style.less
+++ b/projects/kit/components/textarea/textarea.style.less
@@ -46,6 +46,7 @@
     .safari-only({
         .t-pseudo-content, .t-input {
             text-wrap: balance;
+            white-space: break-spaces;
         }
     });
 }
